--- a/tesla-spring-cloud-config/src/main/resources/bootstrap.yml
+++ b/tesla-spring-cloud-config/src/main/resources/bootstrap.yml
@@ -1,6 +1,3 @@
-server:
-  port: 8701
-
 spring:
   application:
     name: tesla-config-server
@@ -11,9 +8,10 @@ spring:
       server:
         git:
           uri: https://github.com/EvanSole/tesla-spring-cloud-config/
-          search-paths: tesla-config
+          search-paths: tesla-config   # git仓库地址下的相对地址，可以配置多个，用,分割
           username:
           password:
+
 
 #        native:      # 从本地目录获取资源文件配置
 #          search-locations: classpath:/tesla-config
