--- a/TeslaPlatform/pom.xml
+++ b/TeslaPlatform/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.tesla.cloud</groupId>
     <artifactId>tesla-spring-cloud-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.5</version>
   </parent>
 
   <groupId>com.tesla.cloud</groupId>
@@ -16,16 +16,34 @@
   <name>TeslaPlatform</name>
 
   <modules>
-    <module>tesla-framework-core</module>
-    <module>tesla-framework-common</module>
     <module>tesla-config-server</module>
     <module>tesla-gateway-server</module>
     <module>tesla-books-service</module>
     <module>tesla-account-service</module>
+    <module>tesla-monitor-server</module>
+    <module>tesla-config-client</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <tesla.framework.version>1.1.1</tesla.framework.version>
   </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <target>1.8</target>
+          <source>1.8</source>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
