--- a/TeslaPlatform/tesla-account-service/pom.xml
+++ b/TeslaPlatform/tesla-account-service/pom.xml
@@ -17,4 +17,30 @@
     </properties>
 
 
+    <dependencies>
+
+        <dependency>
+            <groupId>com.tesla.cloud</groupId>
+            <artifactId>tesla-framework-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tesla.cloud</groupId>
+            <artifactId>tesla-framework-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+
+    </dependencies>
+
 </project>
