--- a/TeslaPlatform/tesla-books-service/pom.xml
+++ b/TeslaPlatform/tesla-books-service/pom.xml
@@ -16,5 +16,25 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>com.tesla.cloud</groupId>
+            <artifactId>tesla-framework-core</artifactId>
+            <version>${tesla.framework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
