--- a/tesla-spring-cloud-parent/pom.xml
+++ b/tesla-spring-cloud-parent/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.tesla.cloud</groupId>
   <artifactId>tesla-spring-cloud-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0</version>
+  <version>1.1.1</version>
 
   <name>tesla-spring-cloud-parent</name>
   <description>tesla-spring-cloud-parent</description>
@@ -16,7 +16,13 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
+  <modules>
+    <module>tesla-framework-core</module>
+    <module>tesla-framework-common</module>
+  </modules>
+
   <properties>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
@@ -237,6 +243,36 @@
       <version>${springfox.swagger2.version}</version>
     </dependency>
 
+    <!-- mybatis spring boot -->
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter</artifactId>
+      <version>1.1.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis</artifactId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spring-boot-starter-jdbc</artifactId>
+          <groupId>org.springframework.boot</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <!-- spring boot -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <!-- spring boot test-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -248,10 +284,6 @@
           <target>1.8</target>
           <source>1.8</source>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
