--- a/TeslaPlatform/tesla-account-service/pom.xml
+++ b/TeslaPlatform/tesla-account-service/pom.xml
@@ -16,19 +16,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
     <dependencies>
 
         <dependency>
             <groupId>com.tesla.cloud</groupId>
-            <artifactId>tesla-framework-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.tesla.cloud</groupId>
             <artifactId>tesla-framework-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${tesla.framework.version}</version>
         </dependency>
 
         <dependency>
@@ -39,6 +32,21 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
     </dependencies>
