--- a/TeslaPlatform/tesla-books-service/src/main/resources/bootstrap.yml
+++ b/TeslaPlatform/tesla-books-service/src/main/resources/bootstrap.yml
@@ -2,12 +2,21 @@ spring:
   application:
     name: tesla-books-server
 
-
-
+  profiles:
+    active: dev
+  cloud:
+    config:
+      profile: dev
+      label: master
+      discovery:
+        enabled: true   # 默认false，设为true表示使用注册中心中的configServer(这里指tesla-config-server)配置而不自己配置configServer的uri
+        service-id: tesla-config-server # 指定config server在服务发现中的serviceId，默认为：configServer
 
 eureka:
   client:
     eureka-server-u-r-l-context: http://localhost:8761/eureka/
+
+
 
 
 
