--- a/TeslaPlatform/tesla-config-server/src/main/resources/bootstrap.yml
+++ b/TeslaPlatform/tesla-config-server/src/main/resources/bootstrap.yml
@@ -7,13 +7,12 @@ spring:
       server:
         git:
           uri: https://github.com/EvanSole/tesla-spring-cloud-config/
-          search-paths: tesla-config   # git仓库地址下的相对地址，可以配置多个，用,分割
+          search-paths: tesla-config-repo   # git仓库地址下的相对地址，可以配置多个，用,分割
           username:
           password:
-
 # 如果不需要从远程git仓库获取配置，可以通过下面配置直接从本地目录获取资源文件配置
 #       native:
-#         search-locations: classpath:/tesla-config
+#         search-locations: classpath:/tesla-config-repo
 
 # 关闭安全验证,如果不关闭,config内置的mapped将无法访问
 management:
